--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
    <!-- Footer -->
    <footer>
     <div class="footer-box">
-        <h3>Company</h3>
+        <h3>madeInLAB inc.</h3>
         <a href="#">About</a>
         <a href="#">features</a>
         <a href="#">Works</a>
